# OpenSpine

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  NEEDS-INPUT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: ai-agent-architect.md  fico-expert.md  identity-expert.md  md-expert.md  mm-expert.md  plugin-architect.md  pp-expert.md  solution-architect.md
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: README.md  data-model.md  development.md  event-catalogue.md  plugin-system.md
docs/decisions/: 0001-postgres-as-source-of-truth.md  0002-qdrant-over-pgvector.md  0003-universal-journal.md  0005-tenant-isolation-model.md  0008-hook-naming-convention.md  README.md
docs/identity/: README.md  authentication.md  permissions.md  roles.md  tenancy.md  users.md
docs/modules/: README.md  co-controlling.md  fi-finance.md  md-master-data.md  mm-materials.md  pp-production.md
docs/roadmap/: README.md  v0.1-foundation.md
examples/openspine-plugin-example/: README.md  pyproject.toml
examples/openspine-plugin-example/src/openspine_plugin_example/: __init__.py  endpoints.py  hooks.py  plugin.yaml
examples/openspine-plugin-example/tests/: test_hooks.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_identity_core.py  0003_rbac_core.py  0004_master_data.py  0005_agent_decision_trace.py  0006_fi_universal_journal.py
src/openspine/: __init__.py  config.py  db.py  main.py
src/openspine/agents/: __init__.py  meta.py  router.py  service.py
src/openspine/co/: __init__.py  models.py
src/openspine/core/: __init__.py  database.py  errors.py  events.py  hooks.py  logging.py  observability.py  plugins.py  qdrant.py  readiness.py
src/openspine/fi/: __init__.py  ap_service.py  models.py  open_items.py  router.py  seed.py  service.py
src/openspine/identity/: __init__.py  audit.py  authz.py  cli.py  context.py  middleware.py  models.py  rbac_models.py  router.py  security.py  seed.py  service.py  system_catalogue.py
src/openspine/md/: __init__.py  global_seed.py  models.py  router.py  service.py
src/openspine/mm/: __init__.py
src/openspine/pp/: __init__.py
src/openspine/workers/: __init__.py  embedding.py  indexer.py
tests/: test_database.py  test_errors.py  test_events.py  test_hooks.py  test_identity_cli.py  test_identity_context.py  test_identity_router.py  test_identity_security.py  test_observability.py  test_plugins.py  test_qdrant_naming.py  test_readiness.py  test_schema_invariants.py  test_smoke.py
tests/integration/: test_agent_surface.py  test_authz_evaluator.py  test_example_plugin.py  test_fi_ap_invoice.py  test_fi_posting.py  test_identity_endpoints.py  test_identity_seed.py  test_indexer.py  test_md_happy_path.py  test_readiness.py  test_role_assignment_endpoints.py
