[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "openspine-plugin-example"
version = "0.1.0"
description = "Reference plugin demonstrating every OpenSpine extension mechanism."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
# openspine is the host that loads this plugin. We don't pin it as a hard
# dependency because OpenSpine isn't published to PyPI yet — install it
# alongside this plugin (e.g. `pip install -e .` from the OpenSpine repo
# root, then `pip install -e examples/openspine-plugin-example/`).
dependencies = []

[project.entry-points."openspine.plugins"]
example = "openspine_plugin_example"

[tool.hatch.build.targets.wheel]
packages = ["src/openspine_plugin_example"]
include = ["src/openspine_plugin_example/plugin.yaml"]
